--- a/EmployeeDetails/appsettings.json
+++ b/EmployeeDetails/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-MDDA4IBG\\SQLEXPRESS;Database=Employee;Trusted_Connection=True;"
+    "DefaultConnection": "Server=YourServer;Database=Yourdb;Trusted_Connection=True;"
   },
   "API": {
     "APIUrl": "http://localhost:7085/api/EmployeeAPI"
